--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FromBoard Delivery</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header class="header">
         <div class="top-header">
             <div class="logo-header">
                 <div class="logo">
-                    <img src="/icons/logo.svg" alt="" class="logo-img">
+                    <img src="icons/logo.svg" alt="" class="logo-img">
                     <div class="logo-text">FromBoard Delivery</div>
                 </div>
             </div>
@@ -58,7 +58,7 @@
                             Сэкономьте на покупках и наслаждайтесь мировыми брендами — наш сервис позволяет вам легко и удобно заказывать товары со всего мира и получать их в России
                         </div>
                     </div>
-                    <img src="/img/man-with-box.png" alt="" class="delivery-img">
+                    <img src="img/man-with-box.png" alt="" class="delivery-img">
                 </div>
                 <div class="calculator-delivery">
                     <div class="calculator-text">
@@ -122,7 +122,7 @@
                 </div>
                 <div class="advantages-grid">
                     <div class="advantages-item">
-                        <img src="/img/advantages-1.svg" alt="" class="advantages-icon">
+                        <img src="img/advantages-1.svg" alt="" class="advantages-icon">
                         <div class="advantages-item-text">
                             <div class="advantages-item-title">
                                 Растоможка груза
@@ -133,7 +133,7 @@
                         </div>
                     </div>
                     <div class="advantages-item">
-                        <img src="/img/advantages-2.svg" alt="" class="advantages-icon">
+                        <img src="img/advantages-2.svg" alt="" class="advantages-icon">
                         <div class="advantages-item-text">
                             <div class="advantages-item-title">
                                 Надёжная упаковка
@@ -144,7 +144,7 @@
                         </div>
                     </div>
                     <div class="advantages-item">
-                        <img src="/img/advantages-3.svg" alt="" class="advantages-icon">
+                        <img src="img/advantages-3.svg" alt="" class="advantages-icon">
                         <div class="advantages-item-text">
                             <div class="advantages-item-title">
                                 Быстро и выгодно
@@ -155,7 +155,7 @@
                         </div>
                     </div>
                     <div class="advantages-item">
-                        <img src="/img/advantages-4.svg" alt="" class="advantages-icon">
+                        <img src="img/advantages-4.svg" alt="" class="advantages-icon">
                         <div class="advantages-item-text">
                             <div class="advantages-item-title">
                                 Удобный сервис
@@ -166,7 +166,7 @@
                         </div>
                     </div>
                     <div class="advantages-item">
-                        <img src="/img/advantages-5.svg" alt="" class="advantages-icon">
+                        <img src="img/advantages-5.svg" alt="" class="advantages-icon">
                         <div class="advantages-item-text">
                             <div class="advantages-item-title">
                                 Прозрачность работы
@@ -177,7 +177,7 @@
                         </div>
                     </div>
                     <div class="advantages-item">
-                        <img src="/img/advantages-6.svg" alt="" class="advantages-icon">
+                        <img src="img/advantages-6.svg" alt="" class="advantages-icon">
                         <div class="advantages-item-text">
                             <div class="advantages-item-title">
                                 Страхование груза
@@ -202,19 +202,19 @@
                     </div>
                     <div class="guarantees-grid">
                         <div class="guarantees-item">
-                            <img src="/img/cert-1.png" alt="" class="guarantees-img">
+                            <img src="img/cert-1.png" alt="" class="guarantees-img">
                             <div class="guarantees-item-description">Свидетельство о регистрации в РФ</div>
                         </div>
                         <div class="guarantees-item">
-                            <img src="/img/cert-2.png" alt="" class="guarantees-img">
+                            <img src="img/cert-2.png" alt="" class="guarantees-img">
                             <div class="guarantees-item-description">Свидетельство о регистрации в США</div>
                         </div>
                         <div class="guarantees-item">
-                            <img src="/img/cert-3.png" alt="" class="guarantees-img">
+                            <img src="img/cert-3.png" alt="" class="guarantees-img">
                             <div class="guarantees-item-description">Свидетельство о регистрации в Китае</div>
                         </div>
                         <div class="guarantees-item">
-                            <img src="/img/cert-4.png" alt="" class="guarantees-img">
+                            <img src="img/cert-4.png" alt="" class="guarantees-img">
                             <div class="guarantees-item-description">Свидетельство о регистрации в Великобритнии</div>
                         </div>
                     </div>
@@ -223,7 +223,7 @@
             </section>
             <section class="reviews">
                 <button class="arrow arrow-left" id="buttonLeft">
-                    <img src="/icons/left-arrow.svg" alt="">
+                    <img src="icons/left-arrow.svg" alt="">
                 </button>
                 <div class="reviews-form">
                     <div class="reviews-title">
@@ -236,7 +236,7 @@
                     </div>
                 </div>
                 <button class="arrow arrow-right" id="buttonRight">
-                    <img src="/icons/right-arrow.svg" alt="">
+                    <img src="icons/right-arrow.svg" alt="">
                 </button>
             </section>
             <section class="contact-form">
@@ -275,7 +275,7 @@
         <div class="footer-top">
             <div class="footer-left">
                 <div class="footer-left-logo">
-                    <img src="/icons/logo.svg" alt="">
+                    <img src="icons/logo.svg" alt="">
                     <p>FromBoard Delivery</p>
                 </div>
                 <div class="footer-left-rules">
@@ -310,6 +310,6 @@
                 </div>
         </div>
     </footer>
-    <script src="/js/script.js" defer></script>
+    <script src="js/script.js" defer></script>
 </body>
 </html>
