--- a/index.html
+++ b/index.html
@@ -238,33 +238,35 @@
                 <img src="icons/right-arrow.svg" alt="">
             </button>
         </section>
-        <section class="contact-form container">
-            <div class="contact-title">
-                Остались вопросы?
-            </div>
-            <div class="contact-grid">
-                <div class="contact-item grid-item">
-                    <label for="contact-name" class="visually-hidden">Имя</label>
-                    <input type="text" id="contact-name" name="name" placeholder="Имя">
+        <section class="contact container">
+            <div class="contact-form">
+                <div class="contact-title">
+                    Остались вопросы?
                 </div>
-                <div class="contact-item grid-item">
-                    <label for="contact-email" class="visually-hidden">Почта</label>
-                    <input type="email" id="contact-email" name="email" placeholder="Почта">
-                </div>
-                <div class="contact-item grid-item">
-                    <label for="contact-phone" class="visually-hidden">Телефон</label>
-                    <input type="tel" id="contact-phone" name="phone" placeholder="Телефон">
-                </div>
-                <div class="contact-item grid-item">
-                    <label for="contact-subject" class="visually-hidden">Тема вопроса</label>
-                    <input type="text" id="contact-subject" name="subject" placeholder="Тема вопроса">
-                </div>
-                <div class="contact-item grid-item full big">
-                    <label for="contact-message" class="visually-hidden">Сообщение</label>
-                    <textarea id="contact-message" name="message" placeholder="Сообщение..."></textarea>
-                </div>
-                <div class="contact-button full">
-                    <button class="grid-button" type="submit">Оставить заявку</button>
+                <div class="contact-grid">
+                    <div class="contact-item grid-item">
+                        <label for="contact-name" class="visually-hidden">Имя</label>
+                        <input type="text" id="contact-name" name="name" placeholder="Имя">
+                    </div>
+                    <div class="contact-item grid-item">
+                        <label for="contact-email" class="visually-hidden">Почта</label>
+                        <input type="email" id="contact-email" name="email" placeholder="Почта">
+                    </div>
+                    <div class="contact-item grid-item">
+                        <label for="contact-phone" class="visually-hidden">Телефон</label>
+                        <input type="tel" id="contact-phone" name="phone" placeholder="Телефон">
+                    </div>
+                    <div class="contact-item grid-item">
+                        <label for="contact-subject" class="visually-hidden">Тема вопроса</label>
+                        <input type="text" id="contact-subject" name="subject" placeholder="Тема вопроса">
+                    </div>
+                    <div class="contact-item grid-item full big">
+                        <label for="contact-message" class="visually-hidden">Сообщение</label>
+                        <textarea id="contact-message" name="message" placeholder="Сообщение..."></textarea>
+                    </div>
+                    <div class="contact-button full">
+                        <button class="grid-button" type="submit">Оставить заявку</button>
+                    </div>
                 </div>
             </div>
         </section>
