--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </ul>
             </nav>
             <div class="request-button-header">
-                <button class="button-request">Оставить заявку</button>
+                <button class="button-request button" id="request-button">Оставить заявку</button>
             </div>
         </div>
     </header>
@@ -107,7 +107,7 @@
                             <input type="text" id="input-city-delivery" name="cityDelivery" placeholder="Город доставки">
                         </div>
                         <div class="calculator-button full">
-                            <button class="grid-button">
+                            <button class="grid-button button">
                                 Заказать расчёт
                             </button>
                         </div>
@@ -218,7 +218,7 @@
                     </div>
                 </div>
             </div>
-            <button class="guarantees-button">Показать больше документов</button>
+            <button class="guarantees-button button">Показать больше документов</button>
         </section>
         <section class="reviews container">
             <button class="arrow arrow-left" id="buttonLeft">
@@ -265,7 +265,7 @@
                         <textarea id="contact-message" name="message" placeholder="Сообщение..."></textarea>
                     </div>
                     <div class="contact-button full">
-                        <button class="grid-button" type="submit">Оставить заявку</button>
+                        <button class="grid-button button" type="submit">Оставить заявку</button>
                     </div>
                 </div>
             </div>
@@ -310,6 +310,29 @@
                 </div>
         </div>
     </footer>
+    <div class="lightbox" id="lightbox">
+        <img src="" alt="Увеличенное фото">
+    </div>
+    <div class="request-form">
+        <div class="request-container">
+            <div class="request-form-title">Укажите данные</div>
+            <div class="request-form-grid">
+                <div class="request-form-item grid-item">
+                    <label for="full-name" class="visually-hidden">ФИО</label>
+                    <input id="full-name" name="full-name" type="text" placeholder="ФИО" />
+                </div>
+                <div class="request-form-item grid-item">
+                    <label for="phone" class="visually-hidden">Телефон</label>
+                    <input id="phone" name="phone" type="tel" placeholder="Телефон" />
+                </div>
+                <div class="request-form-item grid-item">
+                    <label for="email" class="visually-hidden">Почта</label>
+                    <input id="email" name="email" type="email" placeholder="Почта" />
+                </div>
+                <button class="button-request button">Оставить заявку</button>
+            </div>
+        </div>
+    </div>
     <script src="js/script.js" defer></script>
 </body>
 </html>
