--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                             Прозрачность работы
                         </div>
                         <div class="advantages-item-description">
-                            Мы предоставляем полный контроль над каждым этапом доставки, от момента заказа до момента прибытия заказа
+                            <p>Мы предоставляем полный контроль над каждым этапом доставки, от момента заказа до момента прибытия заказа</p>
                         </div>
                     </div>
                 </div>
@@ -221,7 +221,7 @@
             </div>
             <button class="guarantees-button button">Показать больше документов</button>
         </section>
-        <!-- <section class="reviews container" id="reviews">
+        <section class="reviews container" id="reviews">
             <button class="arrow arrow-left" id="buttonLeft">
                 <img src="icons/left-arrow.svg" alt="">
             </button>
@@ -238,7 +238,7 @@
             <button class="arrow arrow-right" id="buttonRight">
                 <img src="icons/right-arrow.svg" alt="">
             </button>
-        </section> -->
+        </section>
         <section class="contact container">
             <div class="contact-form">
                 <div class="contact-title">
