--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FromBoard Delivery</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 </head>
 
 <body>
@@ -58,7 +59,7 @@
                         Сэкономьте на покупках и наслаждайтесь мировыми брендами — наш сервис позволяет вам легко и удобно заказывать товары со всего мира и получать их в России
                     </div>
                 </div>
-                <img src="img/man-with-box.png" alt="" class="delivery-img">
+                <img src="img/man-with-box.png" alt="" class="delivery-img" loading="lazy">
             </div>
             <div class="calculator-delivery">
                 <div class="calculator-text">
@@ -69,7 +70,7 @@
                         Посчитайте, сколько будет стоить перевозка покупки из зарубежа
                     </div>
                 </div>
-                <div class="calculator-form">
+                <form class="calculator-form" action="#" method="post">
                     <div class="calculator-grid">
                         <div class="calculator-item grid-item full">
                             <label  class="visually-hidden" for="input-name">Имя</label>
@@ -113,7 +114,7 @@
                             </button>
                         </div>
                     </div>
-                </div>
+                </form>
             </div>
         </section>
         <section class="advantages container" id="about">
@@ -122,7 +123,7 @@
             </div>
             <div class="advantages-grid">
                 <div class="advantages-item">
-                    <img src="img/advantages-1.svg" alt="" class="advantages-icon">
+                    <img src="img/advantages-1.svg" alt="" class="advantages-icon" loading="lazy">
                     <div class="advantages-item-text">
                         <div class="advantages-item-title">
                             Растоможка груза
@@ -133,7 +134,7 @@
                     </div>
                 </div>
                 <div class="advantages-item">
-                    <img src="img/advantages-2.svg" alt="" class="advantages-icon">
+                    <img src="img/advantages-2.svg" alt="" class="advantages-icon" loading="lazy">
                     <div class="advantages-item-text">
                         <div class="advantages-item-title">
                             Надёжная упаковка
@@ -144,7 +145,7 @@
                     </div>
                 </div>
                 <div class="advantages-item">
-                    <img src="img/advantages-3.svg" alt="" class="advantages-icon">
+                    <img src="img/advantages-3.svg" alt="" class="advantages-icon" loading="lazy">
                     <div class="advantages-item-text">
                         <div class="advantages-item-title">
                             Быстро и выгодно
@@ -155,7 +156,7 @@
                     </div>
                 </div>
                 <div class="advantages-item">
-                    <img src="img/advantages-4.svg" alt="" class="advantages-icon">
+                    <img src="img/advantages-4.svg" alt="" class="advantages-icon" loading="lazy">
                     <div class="advantages-item-text">
                         <div class="advantages-item-title">
                             Удобный сервис
@@ -166,7 +167,7 @@
                     </div>
                 </div>
                 <div class="advantages-item">
-                    <img src="img/advantages-5.svg" alt="" class="advantages-icon">
+                    <img src="img/advantages-5.svg" alt="" class="advantages-icon" loading="lazy">
                     <div class="advantages-item-text">
                         <div class="advantages-item-title">
                             Прозрачность работы
@@ -177,7 +178,7 @@
                     </div>
                 </div>
                 <div class="advantages-item">
-                    <img src="img/advantages-6.svg" alt="" class="advantages-icon">
+                    <img src="img/advantages-6.svg" alt="" class="advantages-icon" loading="lazy">
                     <div class="advantages-item-text">
                         <div class="advantages-item-title">
                             Страхование груза
@@ -202,19 +203,19 @@
                 </div>
                 <div class="guarantees-grid">
                     <div class="guarantees-item">
-                        <img src="img/cert-1.png" alt="" class="guarantees-img">
+                        <img src="img/cert-1.png" alt="" class="guarantees-img" loading="lazy">
                         <div class="guarantees-item-description">Свидетельство о регистрации в РФ</div>
                     </div>
                     <div class="guarantees-item">
-                        <img src="img/cert-2.png" alt="" class="guarantees-img">
+                        <img src="img/cert-2.png" alt="" class="guarantees-img" loading="lazy">
                         <div class="guarantees-item-description">Свидетельство о регистрации в США</div>
                     </div>
                     <div class="guarantees-item">
-                        <img src="img/cert-3.png" alt="" class="guarantees-img">
+                        <img src="img/cert-3.png" alt="" class="guarantees-img" loading="lazy">
                         <div class="guarantees-item-description">Свидетельство о регистрации в Китае</div>
                     </div>
                     <div class="guarantees-item">
-                        <img src="img/cert-4.png" alt="" class="guarantees-img">
+                        <img src="img/cert-4.png" alt="" class="guarantees-img" loading="lazy">
                         <div class="guarantees-item-description">Свидетельство о регистрации в Великобритнии</div>
                     </div>
                 </div>
@@ -222,25 +223,24 @@
             <button class="guarantees-button button">Показать больше документов</button>
         </section>
         <section class="reviews container" id="reviews">
-            <button class="arrow arrow-left" id="buttonLeft">
-                <img src="icons/left-arrow.svg" alt="">
-            </button>
-            <div class="reviews-form">
-                <div class="reviews-title">
-                    Отзывы
-                </div>
-                <div class="reviews-cards-wrapper">
-                    <div class="reviews-cards" id="reviewCards">
-
+            <div class="reviews-title">Отзывы</div>
+            <div class="reviews-cards-container">
+                <button class="arrow arrow-left" id="buttonLeft">
+                    <img src="icons/left-arrow.svg" alt="">
+                </button>
+                <div class="swiper reviews-cards-wrapper">
+                    <div class="swiper-wrapper" id="reviewCards">
+                        
                     </div>
+                    <div class="swiper-pagination"></div>
                 </div>
+                <button class="arrow arrow-right" id="buttonRight">
+                    <img src="icons/right-arrow.svg" alt="">
+                </button>
             </div>
-            <button class="arrow arrow-right" id="buttonRight">
-                <img src="icons/right-arrow.svg" alt="">
-            </button>
         </section>
         <section class="contact container">
-            <div class="contact-form">
+            <form class="contact-form" action="#" method="post">
                 <div class="contact-title">
                     Остались вопросы?
                 </div>
@@ -269,14 +269,14 @@
                         <button class="grid-button button" type="submit">Оставить заявку</button>
                     </div>
                 </div>
-            </div>
+            </form>
         </section>
     </main>
     <footer class="footer">
         <div class="footer-top">
             <div class="footer-left">
                 <div class="footer-left-logo">
-                    <img src="icons/logo.svg" alt="">
+                    <img src="icons/logo.svg" alt="" loading="lazy">
                     <p>FromBoard Delivery</p>
                 </div>
                 <div class="footer-left-rules">
@@ -286,10 +286,10 @@
             <div class="footer-middle">
                 <nav class="menu-list-footer">
                     <ul class="list-footer">
-                        <li class="item-footer">Калькулятор</li>
-                        <li class="item-footer">О нас</li>
-                        <li class="item-footer">Гарантии</li>
-                        <li class="item-footer">Отзывы</li>
+                        <li class="item-footer"><a href="">Калькулятор</a></li>
+                        <li class="item-footer"><a href="">О нас</a></li>
+                        <li class="item-footer"><a href="">Гарантии</a></li>
+                        <li class="item-footer"><a href="">Отзывы</a></li>
                     </ul>
                 </nav>
             </div>
@@ -334,6 +334,7 @@
             </div>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/script.js" defer></script>
 </body>
 </html>
