--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <header class="header">
         <div class="top-header container">
             <div class="logo-header">
-                <div class="logo">
+                <a href="/" class="logo">
                     <img src="icons/logo.svg" alt="" class="logo-img">
                     <div class="logo-text">FromBoard Delivery</div>
-                </div>
+                </a>
             </div>
             <div class="info-header">
                 <div class="info-left">
@@ -275,10 +275,10 @@
     <footer class="footer">
         <div class="footer-top">
             <div class="footer-left">
-                <div class="footer-left-logo">
+                <a href="/" class="footer-left-logo">
                     <img src="icons/logo.svg" alt="" loading="lazy">
                     <p>FromBoard Delivery</p>
-                </div>
+                </a>
                 <div class="footer-left-rules">
                     2023 © Ни одно право не защищено, копируйте сколько влезет
                 </div>
