--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <div class="top-header container">
             <div class="logo-header">
-                <a href="/" class="logo">
+                <a href="#" class="logo">
                     <img src="icons/logo.svg" alt="" class="logo-img">
                     <div class="logo-text">FromBoard Delivery</div>
                 </a>
@@ -275,7 +275,7 @@
     <footer class="footer">
         <div class="footer-top">
             <div class="footer-left">
-                <a href="/" class="footer-left-logo">
+                <a href="#" class="footer-left-logo">
                     <img src="icons/logo.svg" alt="" loading="lazy">
                     <p>FromBoard Delivery</p>
                 </a>
